# camp-engine

./: .gitmodules  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest.yaml
camp/engine/: base.py  loader.py  models.py
camp/engine/rules/basicdemo/: models.py
examples/basicdemo/: ruleset.toml
examples/basicdemo/class/fighter/: fighter.description.md
examples/basicdemo/class/mage/: mage.yaml
examples/basicdemo/skill/: heavy-armor.json  legerdemain.toml  light-armor.toml  martial-weapon.json  medium-armor.yaml  reading.yml  simple-weapon.json  staves.yaml  wands.yaml
examples/broken/: ruleset.toml
examples/broken/class/fighter/: fighter.json
examples/broken/class/thief/: thief.toml
examples/broken/skill/: __defaults__.toml  heavy-armor.json  legerdemain.toml  medium-armor.yaml  wands.yaml
examples/geastest/: ruleset.yaml
examples/geastest/classes/: cleric.yaml  druid.yaml  fighter.yaml  wizard.yaml
examples/geastest/classes/caster-class-a/: caster-class-a.yaml
examples/geastest/classes/martial-class-a/: martial-class-a.yaml
examples/geastest/perks/: creation-only-perk.yaml  grants-bonus-lp.yaml  patron.yaml  perk-discount-perk.yaml  skill-discount-perk.yaml
examples/geastest/skills/category1/: basic-skill.yaml  uses_per_rank.yaml
examples/geastest/skills/category2/: free-text.yaml  grants-bonus-lp.yaml  inherited-option.yaml  inherited-with-ranks.yaml  only-one-option.yaml  requires-option.yaml  single-option.yaml  specific-options.yaml
examples/geastest/skills/category3/: caster-starting-a1.yaml  caster-starting-a2.yaml  martial-starting-a1.yaml
src/camp/engine/: aggregator.py  loader.py  models.py  utils.py
src/camp/engine/rules/: base_engine.py  (+2 more)
tempest/: ruleset.yaml
tempest/flaws/bloodline/: fae-blood.yaml
tempest/flaws/personal/: honor-debt.yaml
tempest/flaws/physical/: dies-alone.yaml
tempest/flaws/spiritual/: disquieting-aura.yaml  truthbound.yaml  unwardable.yaml
tempest/perks/patron/: __defaults__.yaml  patron.yaml
tempest/perks/physical/: elemental-affinity.yaml
tempest/perks/social/: minor-nobility.yaml  pronounced-heritage.yaml  purebred.yaml  sharp-mind.yaml
tempest/perks/supernatural/: sensitive.yaml
tempest/skills/martial/: __defaults__.yaml  extensive-combat-training.yaml
tempest/skills/scholar/: lore.yaml
tempest/skills/trade/: profession-apprentice.yaml  profession-journeyman.yaml  profession-master.yaml
tests/: basicdemo_test.py  requirement_parser_test.py  ruleset_loader_test.py
tests/engine/: test_choice.py  test_records.py  test_ruleset_loader.py
tests/geas5core/: class_test.py  core_test.py  rules_test.py  ruleset_loader_test.py  skills_test.py
tests/rulesets/tempest_test/: ruleset.yaml
tests/tempest/: class_test.py  skills_test.py
tests/tempest_example/: character_test.py  class_test.py  conftest.py  flaws_test.py  perks_test.py  skills_test.py
tests/tempest_test/: conftest.py  test_breeds.py  test_character.py  test_class.py  test_costs.py  test_perks.py  test_roles.py
(+89 files in other folders)
