[project]
name = 'camp-engine'
version = '0.0.1'
authors = [
    { name="Ken Moriarty", email="kwatford@gmail.com"},
]
description = "Rules engines for the Camp app"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic ~= 1.9",
    "tomli ~= 2.0; python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/kw/camp-engine"

[tool.isort]
profile = "black"
force_single_line = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py", "*_test.py"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry]
name = "camp-engine"
version = "0.1.0"
description = ""
authors = ["Ken Moriarty <kwatford@gmail.com>"]
readme = "README.md"
packages = [{include = "camp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=1.10,<2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pytest = "7.1"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
