[project]
name = 'camp-engine'
version = '0.0.1'
authors = [{ name = "Ken Moriarty", email = "ken@kmoriarty.dev" }]
description = "Rules engines for the Camp app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Homepage" = "https://github.com/kw/camp-engine"

[tool.isort]
profile = "black"
force_single_line = true

[tool.poetry]
name = "camp-engine"
version = "0.1.0"
description = ""
authors = ["Ken Moriarty <ken@kmoriarty.dev>"]
readme = "README.md"
packages = [{ include = "camp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
pydantic = "^2.1.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ipython = "~=8.2"
pre-commit = "*"
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py", "*_test.py"]
pythonpath = ["src"]
testpaths = ["tests"]
